# fastai-podman

./: .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
